--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -124,19 +124,20 @@
           class="tab-pane fade {% if active_tab == 'upcoming_block' %}show active{% endif %}"
         >
           <h5 class="text-center mt-2 mb-1">Upcoming Block</h5>
-          <form
-            method="GET"
-            action="{{ url_for('main.host', active_tab='upcoming_block') }}"
-          >
-            <div class="row pb-2 pt-1">
-              <!-- Block Details Section -->
-              <div class="col-md-6 d-flex justify-content-center">
+
+          <div class="row pb-2 pt-1 ms-2">
+            <!-- Block Details Section -->
+            <div class="col-md-6">
+              <form
+                method="GET"
+                action="{{ url_for('main.host', active_tab='upcoming_block') }}"
+              >
                 <div class="card p-4">
-                  <h6 class="mb-5">Block Details</h6>
+                  <h6 class="mb-4">Block Details</h6>
                   <p><strong>Block Name:</strong> {{meeting_block}}</p>
                   <p><strong>Zone Name:</strong> {{meeting_zone}}</p>
                   <p><strong>The Host:</strong> {{host}}</p>
-                  <p><strong>When:</strong>{{when}}</p>
+                  <p><strong>When:</strong> {{when}}</p>
                   <p>
                     Wrong meeting details?
                     <a
@@ -163,10 +164,20 @@
                     </button>
                   </div>
                 </div>
-              </div>
+              </form>
+            </div>
 
-              <!-- Communicate & Send Payment Link Section -->
-              <div class="col-md-6 d-flex justify-content-center">
+            <!-- Communicate & Send Payment Link Section -->
+            <div class="col-md-6">
+              <form
+                method="POST"
+                action="{{ url_for('main.host', active_tab='upcoming_block') }}"
+              >
+                <input
+                  type="hidden"
+                  name="csrf_token"
+                  value="{{ csrf_token() }}"
+                />
                 <div class="card p-4">
                   <h6 class="no-wrap mb-5">Communicate & Send Payment Link</h6>
                   <label for="message">Message:</label>
@@ -175,23 +186,23 @@
                     class="form-control mt-4"
                     rows="6"
                     style="height: 150px"
+                    readonly
                   >
-Dear Member, 
-Upcoming block is hosted by {{meeting_zone}}  and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
-  
-                      </textarea
+                  {{ message }}
+          </textarea
                   >
+                  <input type="hidden" name="message" value="{{ message }}" />
 
-                  <button class="submit-btn" onclick="sendMessage()">
+                  <button class="submit-btn" name="send_sms" type="submit">
                     SEND
                   </button>
+                  {{ flash.render_flash_messages() }}
                 </div>
-              </div>
+              </form>
             </div>
-          </form>
+          </div>
         </div>
-
-        <!--/ upcoming Block -->
+        <!--/ Upcoming Block -->
 
         <!-- Block Members -->
         <div
