fix error display

--- a/app/templates/block_reports.html
+++ b/app/templates/block_reports.html
@@ -78,7 +78,8 @@ block content %}
                   {% if block_contributions %}
                   {% set total_contributed = block_contributions.values() | sum %}
                   <span style="color: rgb(14, 169, 14)">Kes {{ total_contributed }}</span>
-           
+                  {% else %}
+                  <span style="color: rgb(14, 169, 14)">Kes 0.00</span>
               {% endif %}
               
                 </div>
@@ -109,16 +110,15 @@ block content %}
                 </tr>
               </thead>
               <tbody>
-                {% for block, amount in block_contributions.items() %}
-                <tr>
-                  <td>{{ block }}</td>
-                  <td>Kes {{ amount }}</td>
-                </tr>
-                {% else %}
-                <tr>
-                  <td colspan="4">No contributions found</td>
-                </tr>
-                {% endfor %}
+                {% if block_contributions is mapping %}
+                    {% for block, amount in block_contributions.items() %}
+                        <tr><td>{{ block }}</td><td>Kes {{ amount }}</td></tr>
+              
+                    {% endfor %} 
+                    {% else %}
+                    <tr><td colspan="2">No contributions found</td></tr>            
+                {% endif %}
+            
               </tbody>
               
             </table>
