correct role names

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -115,7 +115,7 @@
           ><i class="bi bi-bar-chart-fill"></i> Reports</a
         >
         <div class="sidebar-bottom">
-          {% if current_user.has_role('SuperUseristrator') or
+          {% if current_user.has_role('Administrator') or
           current_user.has_role('SuperUser') %}
           <a
             href="{{ url_for('main.committee') }}"
@@ -172,7 +172,7 @@
               >
             </div>
             <div class="sidebar-bottom">
-              {% if current_user.has_role('SuperUseristrator') or
+              {% if current_user.has_role('Administrator') or
               current_user.has_role('SuperUser') %}
               <a
                 href="{{ url_for('main.committee') }}"
