--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,4 +1,3 @@
-{% extends 'admin/master.html' %}
-
-{% block body %}
+{% extends 'admin/master.html' %} {% block body %}
+<p>Other contents here.</p>
 {% endblock %}
