--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -203,11 +203,18 @@
                 <div class="profile-area">
                   <i class="bi bi-search me-2"></i>
                   <i class="bi bi-bell"></i>
+                  {% if current_user.is_authenticated %}
                   <a href="{{url_for('main.settings')}}">
                     <img
                       src="{{ url_for('static', filename='images/' + current_user.image_file) }}"
                       alt="Profile Picture"
                   /></a>
+                  {% else %}
+                  <img
+                    src="{{ url_for('static', filename='images/default.jpg') }}"
+                    alt="Default Profile Picture"
+                  />
+                  {% endif %}
 
                   <span>{{current_user.full_name}}</span>
                   <div
@@ -257,12 +264,19 @@
       <div class="search-bar mt-2">
         <input type="text" class="form-control ps-4" placeholder="Search" />
       </div>
+      {% if current_user.is_authenticated %}
 
       <a href="{{url_for('main.settings')}}">
         <img
           src="{{ url_for('static', filename='images/' + current_user.image_file) }}"
           alt="Profile Picture"
       /></a>
+      {% else %}
+      <img
+        src="{{ url_for('static', filename='images/default.jpg') }}"
+        alt="Default Profile Picture"
+      />
+      {% endif %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
