--- a/app/templates/admin/my_base.html
+++ b/app/templates/admin/my_base.html
@@ -1,4 +1,30 @@
-{% extends 'admin/base.html' %} {% block head_tail %} {{ super() }}
+{% extends 'admin/base.html' %} {% block head_css %}
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  rel="stylesheet"
+/>
+
+<link rel="stylesheet" href="../static/tabpay_css/dashboard.css" />
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock %}{% block head_tail %} {{ super() }}
 <meta name="csrf-token" content="{{ csrf_token }}" />
 <script>
   // Set up CSRF token for AJAX requests
