added a functional search bar,modified the following files modified:   app/main/routes.py         modified:   app/templates/base.html         modified:   app/templates/host.html         modified:   app/templates/settings.html         modified:   app/templates/statistics.html,added a file search_results.html

--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% import 'flash.html' as flash %} {% block heading
-%}Regular Block Hosting {% endblock %} {% block content %}
+{% extends 'base.html' %} {% import 'flash.html' as flash %} {% block heading%}
+<div class="Block-hosting mt-5">Regular Block Hosting </div>
+{% endblock %} {% block content %}
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
