--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% import 'flash.html' as flash %} {% block heading%}
-<div class="Block-hosting mt-5">Regular Block Hosting </div>
+Regular Block Hosting
 {% endblock %} {% block content %}
 <link
   rel="stylesheet"
