--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% import 'flash.html' as flash %} {% block heading%}
-<div class="Umbrella mt-5">Community Umbrella settings</div>
+Community Umbrella settings
 {% endblock %} {% block content %} {% macro
 render_field(field) %}
 <div class="mb-3">
