modified:   app/main/routes.py-placed @login_required juu ya @approved;(       modified:   app/templates/security/forgot_password.html         modified:   app/templates/security/login_user.html         modified:   app/templates/security/register_user.html         modified:   app/templates/security/send_confirmation.html)-modify error display;(    modified:   app/__init__.py         modified:   app/auth/decorators.py         modified:   app/auth/forms.py         modified:   app/auth/routes.py         modified:   app/auth/signals.py)-tried to implement redirection based on role partialy;  modified:   app/auth/forms.py-implement validation of email and id

--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -31,6 +31,7 @@ content %}
           action="{{ url_for_security('forgot_password') }}"
           method="post"
           name="forgot_password_form"
+          novalidate
         >
           {{ forgot_password_form.hidden_tag() }} {{
           render_form_errors(forgot_password_form) }}
