--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -53,7 +53,41 @@
               class="logo"
             />
           </div>
+<!-- Search Form -->
+<div
+id="searchFormContainer"
+class="d-flex align-items-center"
+>
+<form
+  action="{{ url_for('main.search') }}"
+  method="get"
+  class="d-flex align-items-center"
+  onsubmit="clearSearchForm()"
+>
+  <input
+    type="text"
+    name="query"
+    class="form-control me-2"
+    placeholder="Search..."
+    aria-label="Search"
+    style="width: 250px"
+    required
+  />
+  <select name="searchType" class="form-select" required>
+    <option value="" disabled selected>
+      Select a category
+    </option>
+    <option value="members">Members</option>
+    <option value="payments">Payments</option>
+    <option value="blocks">Blocks</option>
+    <option value="zones">Zones</option>
+  </select>
 
+  <button type="submit" class="btn btn-primary">
+    Search
+  </button>
+</form>
+</div>
         <h1 class="mb-4">Search Results for: "{{ query }}"</h1>
 
         <!-- Display selected search type -->
