--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -164,7 +164,15 @@ class="d-flex align-items-center"
             {% endif %}
         {% endif %}
     </div>
+    <button onclick="goBack()">Back</button>
 
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
