--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -200,12 +200,14 @@
               <div class="col-md-4 d-none d-lg-block">
                 <!-- Profile section -->
                 <div class="profile-area">
-                  <a href="{{ url_for('main.search') }}"><i
-                    class="bi bi-search me-2"
-                    id="toggleSearch"
-                    style="cursor: pointer"
-                  ></i></a>
-                  
+                  <a href="{{ url_for('main.search') }}"
+                    ><i
+                      class="bi bi-search me-2"
+                      id="toggleSearch"
+                      style="cursor: pointer; color: black"
+                    ></i
+                  ></a>
+
                   <i class="bi bi-bell"></i>
                   {% if current_user.is_authenticated %}
                   <a href="{{url_for('main.settings')}}">
@@ -254,54 +256,24 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <!-- Main Content -->
+            {% block content %}{% endblock %}
           </div>
-          <!-- Main Content -->
-          {% block content %}{% endblock %}
         </div>
       </div>
     </div>
 
-    <!-- Scripts -->
-    <script>
-      // JavaScript to toggle search form visibility
-      document.getElementById('toggleSearch').addEventListener('click', function() {
-        const searchFormContainer = document.getElementById('searchFormContainer');
-        if (searchFormContainer.classList.contains('d-none')) {
-          searchFormContainer.classList.remove('d-none');
-          searchFormContainer.classList.add('d-flex');
-        } else {
-          searchFormContainer.classList.add('d-none');
-          searchFormContainer.classList.remove('d-flex');
-        }
-      });
-    </script>
-      <script>
-        function handleSearch() {
-          // Perform the search logic here
-          const searchBar = document.getElementById('searchBar');
-          const query = searchBar.value;
-      
-          // Example: Simulate a search action
-          console.log('Searching for:', query);
-      
-          // Reset the search input
-          searchBar.value = ''; // This resets the input field to its default state
-      
-          // Remove focus from the search bar
-          searchBar.blur(); // This makes the search input lose focus
-        }
-      </script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    ></script>
     <!-- Footer for small screens with Profile, Alerts, Search -->
     <div class="container-fluid d-lg-none mobile-footer">
       <i class="bi bi-bell"></i>
-      <!-- Alert icon -->
-      <div class="search-bar mt-2">
-        <input type="text" class="form-control ps-4" placeholder="Search" />
-      </div>
+      <a href="{{ url_for('main.search') }}"
+        ><i
+          class="bi bi-search me-2"
+          id="toggleSearch"
+          style="cursor: pointer; color: black; font-size: larger"
+        ></i
+      ></a>
       {% if current_user.is_authenticated %}
 
       <a href="{{url_for('main.settings')}}">
