--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -28,6 +28,11 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-6 mb-3">
+          <a
+          href="{{url_for('main.view_all_blocks')}}"
+          style="text-decoration: none"
+        >
+          
           <div
             class="glass-card stats-card text-dark"
             style="background-color: #f9e79f18"
@@ -35,6 +40,7 @@
             <p>Total Number of Blocks</p>
             <h2>{{total_blocks}}</h2>
           </div>
+          </a>
         </div>
         <div class="col-lg-3 col-md-6 mb-3">
           <div
